Remplacement du stepsize a 10

--- a/bar/vertical.html
+++ b/bar/vertical.html
@@ -20,7 +20,7 @@
         <canvas id="canvas"></canvas>
     </div>
     <script>
-        var VICTORY = ["Victoire", "Défaites"];
+        var VICTORY = ["Victoire", "Défaite"];
         var color = Chart.helpers.color;
         var barChartData = {
             labels: ["Pourcentage victoire/défaite"],
@@ -59,7 +59,7 @@
                             ticks: {
                                 min: 0,
                                 max: 100,
-                                stepSize: 20,
+                                stepSize: 10,
                                 beginAtZero:true
                             }
                         }]
